--- a/social-network/index.html
+++ b/social-network/index.html
@@ -11,32 +11,40 @@
     <link rel="stylesheet" href="app/app.css">
     <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body>
+<body ng-controller="MainCtrl" >
 <!--HEADER-->
 <div class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
             <a href="#/" class="navbar-brand">SoftUni Social Network</a>
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav">
+            <ul ng-if="isAuth" class="nav navbar-nav">
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="#/newsFeed">News Feed</a>
                 </li>
                 <li>
-                    <a href="http://news.bootswatch.com">Blog</a>
+                    <a href="#/frendRequest">Request</a>
+                </li>
+                <li>
+                    <a href="#/settings">Settings</a>
+                </li>
+                <li>
+                    <a href="#/changePassword">Change password</a>
                 </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/logout">Logout</a></li>
+            <ul>
+                <li class="nav navbar-nav navbar-right" ng-controller="HomeCtrl">
+                    <button ng-click="logOut()">LOGOUT</button>
+                </li>
             </ul>
         </div>
+
     </div>
+</div>
+
+<div class="container">
+    {{currentUser.name}} - {{currentUser.id}}
 </div>
 
 <!--MAIN-->
@@ -69,7 +77,13 @@
 <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="app/app.js"></script>
-<script src="app/home/home-controller.js"></script>
+
 <script src="app/users/authentication.js"></script>
+<script src="app/users/identity.js"></script>
+<script src="app/news-feed/feed.js"></script>
+
+<script src="app/home/home-controller.js"></script>
+<script src="app/common/main-controller.js"></script>
+<script src="app/news-feed/news-feed-controller.js"></script>
 </body>
 </html>
